<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ArtDetailsFragment">


    <ImageView
        android:id="@+id/artImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/artNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_art_name"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/artImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/artistNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_artist_name"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/artNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/artReleaseYearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_art_release_year"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/artistNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/artReleaseYearEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>